--- a/nvme_rhel_94.adoc
+++ b/nvme_rhel_94.adoc
@@ -5,7 +5,7 @@ keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.4 with ONTAP
 ---
 
-= NVMe-oF host configuration for RHEL 9.4 with ONTAP
+= Configure RHEL 9.4 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -20,41 +20,22 @@ include::_include/nvme/nvme-introduction.adoc[]
 You can use the following support and features with the NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 9.4. You should also review the known limitations before starting the configuration process.
 
 * Support available:
-
-* Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
-
-* Use of NVMe and SCSI co-existent traffic on the same host on a given host bus adapter (HBA) without the explicit dm-multipath settings to prevent claiming NVMe namespaces.
-
+** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
+** Running both NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices for SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
+** RHEL 9.4 enables in-kernel NVMe multipath for NVMe namespaces by default, removing the need for explicit settings.
+** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVM/TCP. You can use secure in-band authentication for NVMe/TCP with RHEL 9.4.
++
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
+* Features available:
+** There are no new features in this release.
+* Known limitations: 
+** There are no known limitations.
 
-== Features
+== Step 1: Optionally, enable SAN booting
 
-* RHEL 9.4 has in-kernel NVMe multipath enabled for NVMe namespaces by default; therefore, there is no need for explicit settings.
-* SAN booting using the NVMe/FC protocol is supported.
+include::_include/nvme/enable-san-booting.adoc[]
 
-== Known limitations
-
-There are no known limitations.
-
-== Enable SAN booting
-
-You can configure your host to use SAN booting to simplify deployment and improve scalability.
-
-.Before you begin
-Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your Linux OS, host bus adapter (HBA), HBA firmware, HBA boot BIOS, and ONTAP version support SAN booting.
-
-.Steps
-
-. Create a SAN boot namespace and map it to the host.
-+
-See https://docs.netapp.com/us-en/ontap/san-admin/create-nvme-namespace-subsystem-task.html[Provision NVMe storage^].
-. Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
-+
-For information on how to enable the HBA BIOS, see your vendor-specific documentation.
-
-. Verify that the configuration was successful by rebooting the host and verifying that the OS is up and running.
-
-== Validate software versions
+== Step 2: Validate software versions
 
 You can use the following procedure to validate the minimum supported RHEL 9.4 software versions.
 
@@ -62,11 +43,12 @@ You can use the following procedure to validate the minimum supported RHEL 9.4 s
 
 . Install RHEL 9.4 on the server. After the installation is complete, verify that you are running the specified RHEL 9.4 kernel: 
 +
+[source,cli]
 ----
-# uname -r
+uname -r
 ----
 +
-*Example output:*
+The following example shows a Rocky Linux kernel version:
 +
 ----
 5.14.0-423.el9.x86_64
@@ -74,11 +56,12 @@ You can use the following procedure to validate the minimum supported RHEL 9.4 s
 
 . Install the `nvme-cli` package:
 +
+[source,cli]
 ----
-# rpm -qa|grep nvme-cli
+rpm -qa|grep nvme-cli
 ----
 +
-*Example output:*
+The following example shows an nvme-cli package version:
 +
 ----
 nvme-cli-2.6-4.el9.x86_64
@@ -86,12 +69,12 @@ nvme-cli-2.6-4.el9.x86_64
 
 . Install the `libnvme` package:
 +
+[source,cli]
 ----
-#rpm -qa|grep libnvme
+rpm -qa|grep libnvme
 ----
 +
-
-*Example output* 
+The following example shows an libnvme package version:
 +
 ----
 libnvme-1.6-1.el9.x86_64
@@ -99,11 +82,12 @@ libnvme-1.6-1.el9.x86_64
 
 . On the RHEL 9.4 host, check the hostnqn string at `/etc/nvme/hostnqn`:
 +
+[source,cli]
 ----
-# cat /etc/nvme/hostnqn
+cat /etc/nvme/hostnqn
 ----
 +
-*Example output*
+The following example shows an hostnqn version:
 +
 ----
 nqn.2014-08.org.nvmexpress:uuid: uuid:4c4c4544-0036-5610-804a-c7c04f365a32
@@ -111,21 +95,23 @@ nqn.2014-08.org.nvmexpress:uuid: uuid:4c4c4544-0036-5610-804a-c7c04f365a32
 
 . Verify that the `hostnqn` string matches the `hostnqn` string for the corresponding subsystem on the ONTAP array:
 +
+[source,cli]
 ----
 ::> vserver nvme subsystem host show -vserver vs_coexistence_LPE36002
 ----
 +
-*Example output:*
-+
+.Show example
+[%collapsible]
+====
 ----
 Vserver     Subsystem          Host NQN
 ----------- --------------- ----------------------------------------------------------
 vs_coexistence_LPE36002   nvme    nqn.2014-08.org.nvmexpress:uuid: 4c4c4544-0036-5610-804a-
 ----
+====
 +
 [NOTE]
 If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
-
 
 == Configure NVMe/FC
 
