--- a/nvme_rhel_94.adoc
+++ b/nvme_rhel_94.adoc
@@ -4,7 +4,6 @@ permalink: nvme_rhel_94.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.4 with ONTAP
 ---
-
 = Configure RHEL 9.4 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
@@ -23,7 +22,6 @@ You can use the following support and features with the NVMe-oF host configurati
 ** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 ** Running both NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices for SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
 ** RHEL 9.4 enables in-kernel NVMe multipath for NVMe namespaces by default, removing the need for explicit settings.
-** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVM/TCP. You can use secure in-band authentication for NVMe/TCP with RHEL 9.4.
 +
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 * Features available:
@@ -113,7 +111,7 @@ vs_coexistence_LPE36002   nvme    nqn.2014-08.org.nvmexpress:uuid: 4c4c4544-0036
 [NOTE]
 If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
 
-== Configure NVMe/FC
+== Step 3: Configure NVMe/FC
 
 You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
 
@@ -121,27 +119,35 @@ You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
 ====
 .Broadcom/Emulex
 --
+
+Configure NVMe/FC for a Broadcom/Emulex adapter.
+
 .Steps
 
 . Verify that you are using the supported adapter model: 
+
+.. Display the model names:
 +
+[source,cli]
 ----
-# cat /sys/class/scsi_host/host*/modelname
+cat /sys/class/scsi_host/host*/modelname
 ----
 +
-*Example output:*
+You should see the following output:
 +
 ----
 LPe36002-M64 
 LPe36002-M64
+----
 
+.. Display the model descriptions:
++
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/modeldesc
 ----
 +
-----
-# cat /sys/class/scsi_host/host*/modeldesc
-----
-+
-*Example output:*
+You should see an output similar to the following example:
 +
 ----
 Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter 
@@ -149,41 +155,82 @@ Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter
 ----
 
 . Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver: 
+
+.. Display the firmware version:
++
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/fwrev
+---- 
++
+The following example shows firmware versions:
 +
 ----
-# cat /sys/class/scsi_host/host*/fwrev
 14.2.673.40, sli-4:6:d
 14.2.673.40, sli-4:6:d
+----
 
-
-# cat /sys/module/lpfc/version
+.. Display the inbox driver version:
++
+[source,cli]
+----
+cat /sys/module/lpfc/version
+---- 
++
+The following example shows a driver version:
++
+----
 0:14.2.0.16
 ----
+
 +
 For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
-. Verify that `lpfc_enable_fc4_type` is set to `3`:
+. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
 +
+[source,cli]
 ----
-# cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
-3
+cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 ----
 
-. Verify that the initiator ports are up and running and that you can see the target LIFs:
+. Verify that you can view your initiator ports:
 +
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/port_name
+cat /sys/class/fc_host/host*/port_name
+----
++
+The following example shows port identities:
++
+---- 
 0x100000109b3c081f
 0x100000109b3c0820
+----
 
+. Verify that your initiator ports are online:
++
+[source,cli]
+----
+cat /sys/class/fc_host/host*/port_state
 ----
 +
+You should see the following output:
++
 ----
-# cat /sys/class/fc_host/host*/port_state
 Online
 Online
 ----
+
+. Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
 +
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/nvme_info
+----
++
+.Show example
+[%collapsible]
+=====
 [subs=+quotes]
 ----
 # cat /sys/class/scsi_host/host*/nvme_info 
@@ -209,26 +256,26 @@ LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
 Total FCP Cmpl 000000001f5c3618 Issue 000000001f5967a4 OutIO fffffffffffd318c
 abort 00000629 noxri 00000000 nondlp 0000044e qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00000629 Err 0001bd3d
-
 ----
-
+=====
 
 --
 
-.Marvell/QLogic FC Adapter for NVMe/FC
+.Marvell/QLogic
 --
 
-The native inbox qla2xxx driver included in the RHEL 9.4 GA kernel has the latest fixes. These fixes are essential for ONTAP support. 
+Configure NVMe/FC for a Marvell/QLogic adapter.
 
 .Steps
 
 . Verify that you are running the supported adapter driver and firmware versions:
 +
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/symbolic_name
+cat /sys/class/fc_host/host*/symbolic_name
 ----
 +
-*Example output*
+The follow example shows driver and firmware versions:
 +
 ----
 QLE2872 FW:v9.12.01 DVR:v10.02.09.100-k 
@@ -237,22 +284,22 @@ QLE2872 FW:v9.12.01 DVR:v10.02.09.100-k
 
 . Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
 +
+[source,cli]
 ----
-# cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
-1
+cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 ----
-
++
+The expected ouptut is 1.
 --
 ====
 
-=== Enable 1MB I/O (Optional)
+== Step 4: Optionally, enable 1MB I/O 
 
 include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
+== Step 5: Configure NVMe/TCP
 
-== Configure NVMe/TCP
-
-NVMe/TCP does not have an auto-connect functionality. Instead, you can discover the NVMe/TCP subsystems and namespaces by performing the NVMe/TCP `connect` or `connect-all` operations manually. 
+The NVMe/TCP protocol doesn't support the auto-connect operation. Instead, you can discover the NVMe/TCP subsystems and namespaces by performing the NVMe/TCP connect or connect-all operations manually.
 
 .Steps
 
@@ -262,8 +309,9 @@ NVMe/TCP does not have an auto-connect functionality. Instead, you can discover 
 nvme discover -t tcp -w host-traddr -a traddr
 ----
 +
-*Example output:*
-+
+.Show example
+[%collapsible]
+====
 [subs=+quotes]
 ----
 # nvme discover -t tcp -w 192.168.167.1 -a 192.168.167.16
@@ -362,6 +410,7 @@ traddr:  192.168.166.7
 eflags:  none
 sectype: none
 ----
+====
 
 . Verify that the other NVMe/TCP initiator-target LIF combinations are able to successfully fetch discovery log page data: 
 +
@@ -369,14 +418,17 @@ sectype: none
 nvme discover -t tcp -w host-traddr -a traddr
 ----
 +
-*Example output:*
-+
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
 ----
-#nvme discover -t tcp -w 192.168.166.6 -a 192.168.166.7 
-#nvme discover -t tcp -w 192.168.166.6 -a 192.168.166.8 
-#nvme discover -t tcp -w 192.168.167.6 -a 192.168.167.7 
-#nvme discover -t tcp -w 192.168.167.6 -a 192.168.167.8
+nvme discover -t tcp -w 192.168.166.6 -a 192.168.166.7 
+nvme discover -t tcp -w 192.168.166.6 -a 192.168.166.8 
+nvme discover -t tcp -w 192.168.167.6 -a 192.168.167.7 
+nvme discover -t tcp -w 192.168.167.6 -a 192.168.167.8
 ----
+====
 
 . Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
 +
@@ -384,14 +436,17 @@ nvme discover -t tcp -w host-traddr -a traddr
 nvme connect-all -t tcp -w host-traddr -a traddr
 ----
 +
-*Example output:*
-+
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
 ----
-#	nvme	connect-all	-t	tcp	-w	192.168.166.6	-a	192.168.166.7							
-#	nvme	connect-all	-t	tcp	-w	192.168.166.6	-a	192.168.166.8 						
-#	nvme	connect-all	-t	tcp	-w	192.168.167.6	-a	192.168.167.7 						
-#	nvme	connect-all	-t	tcp	-w	192.168.167.6	-a	192.168.167.8						
+nvme	connect-all	-t	tcp	-w	192.168.166.6	-a	192.168.166.7							
+nvme	connect-all	-t	tcp	-w	192.168.166.6	-a	192.168.166.8 						
+nvme	connect-all	-t	tcp	-w	192.168.167.6	-a	192.168.167.7 						
+nvme	connect-all	-t	tcp	-w	192.168.167.6	-a	192.168.167.8						
 ----
+====
 
 [NOTE]
 ====
@@ -400,65 +455,26 @@ Beginning with RHEL 9.4, the setting for the NVMe/TCP `ctrl_loss_tmo timeout` is
 include::_include/nvme/ctrl-loss-tmo-default-off.adoc[]
 ====
 
+== Step 6: Validate NVMe-oF
 
-== Validate NVMe-oF
+include::_include/nvme/reuse-nvme-validate-nvme-of.adoc[]
 
-You can use the following procedure to validate NVME-oF.
-
-.Steps
-
-. Verify that the in-kernel NVMe multipath is enabled:
-+
-----
-# cat /sys/module/nvme_core/parameters/multipath
-Y
-----
-
-. Verify that the appropriate NVMe-oF settings (such as, model set to NetApp ONTAP Controller and load balancing iopolicy set to round-robin) for the respective ONTAP namespaces correctly reflect on the host:
-+
-----
-# cat /sys/class/nvme-subsystem/nvme-subsys*/model
-NetApp ONTAP Controller
-NetApp ONTAP Controller
-----
-+
-----
-# cat /sys/class/nvme-subsystem/nvme-subsys*/iopolicy 
-round-robin
-round-robin
-----
-
-. Verify that the namespaces are created and correctly discovered on the host:
-+
-----
-# nvme list
-----
-+
-*Example output:*
-+
-----
-Node         SN                   Model                          
----------------------------------------------------------  
-/dev/nvme4n1 81Ix2BVuekWcAAAAAAAB	NetApp ONTAP Controller
-                               
-
-Namespace Usage    Format             FW             Rev
------------------------------------------------------------
-1                 21.47 GB / 21.47 GB	4 KiB + 0 B   FFFFFFFF
-----
+include::_include/nvme/validate-nvme-of-version9.adoc[]
 
 . Verify that the controller state of each path is live and has the correct ANA status:
 +
-
 [role="tabbed-block"]
-====
+=====
 .NVMe/FC
 --
+[source,cli]
 ----
-# nvme list-subsys /dev/nvme5n21
+nvme list-subsys /dev/nvme4n5
 ----
 
-*Example output:*
+.Show example
+[%collapsible]
+====
 [subs=+quotes]
 ----
 nvme-subsys4 - NQN=nqn.1992-08.com.netapp:sn.efd7989cb10111ee871ed039ea954d18:subsystem.nvme
@@ -471,18 +487,20 @@ nvme-subsys4 - NQN=nqn.1992-08.com.netapp:sn.efd7989cb10111ee871ed039ea954d18:su
   +- nvme6 fc traddr=nn-0x2013d039ea951c45:pn-0x2014d039ea951c45,host_traddr=nn-  0x200000109bdacc75:pn-0x100000109bdacc75 live *optimized*
 
 ----
+====
 --
 .NVMe/TCP
 --
+[source,cli]
 ----
-# nvme list-subsys /dev/nvme1n1 
+nvme list-subsys /dev/nvme1n1 
 ----
 
-*Example output:*
-
+.Show example
+[%collapsible]
+====
 [subs=+quotes]
 ----
-
 nvme-subsys1 -NQN=nqn.1992-08.com.netapp:
 sn.983de7f4b39411ee871ed039ea954d18:subsystem.nvme_tcp_1         hostnqn=nqn.2014-08.org.nvmexpress:uuid:
 4c4c4544-0035-5910-804b-c2c04f444d33
@@ -492,23 +510,26 @@ iopolicy=round-robin
 +- nvme4 tcp traddr=192.168.166.8,trsvcid=4420,host_traddr=192.168.166.6,src_addr=192.168.166.6 *live*
 +- nvme2 tcp traddr=192.168.167.7,trsvcid=4420,host_traddr=192.168.167.6,src_addr=192.168.167.6 *live*
 +- nvme1 tcp traddr=192.168.167.8,trsvcid=4420,host_traddr=192.168.167.6,src_addr=192.168.167.6 *live*
-  
 ----
---
 ====
+--
+=====
 
 . Verify that the NetApp plug-in displays the correct values for each ONTAP namespace device:
 +
 [role="tabbed-block"]
-====
+=====
 .Column
 --
+[source,cli]
 ----
-# nvme netapp ontapdevices -o column
+nvme netapp ontapdevices -o column
 ----
 
-*Example output:*
-
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
 ----
 Device        Vserver   Namespace Path                                                          
 ----------------------- ------------------------------ 
@@ -520,14 +541,19 @@ NSID       UUID                                   Size
 ------------------------------------------------------------
 1          6fcb8ea0-dc1e-4933-b798-8a62a626cb7f	21.47GB
 ----
+====
 --
 .JSON
 --
+[source,cli]
 ----
-# nvme netapp ontapdevices -o json
+nvme netapp ontapdevices -o json
 ----
 
-*Example output*
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
 ----
 {
 
@@ -542,14 +568,13 @@ NSID       UUID                                   Size
 
 ]
 }
-
-
 ----
---
 ====
+--
+=====
 
-== Known issues
+== Step 7: Review the known issues
 
-There are no known issues for the NVMe-oF host configuration for RHEL 9.4 with ONTAP release.
+There are no known issues.
 
 
