--- a/nvme_rhel_81.adoc
+++ b/nvme_rhel_81.adoc
@@ -5,7 +5,7 @@ keywords: nvme, linux, rhel, red hat, enterprise
 summary: Describes how to configure NVMe/FC for RHEL 8.1 with ONTAP
 ---
 
-= NVMe/FC host configuration for RHEL 8.1 with ONTAP
+= Configure RHEL 8.1 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
