--- a/nvme_rhel_83.adoc
+++ b/nvme_rhel_83.adoc
@@ -5,7 +5,7 @@ keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe/FC Host for RHEL 8.3 with ONTAP
 ---
 
-= NVMe/FC host configuration for RHEL 8.3 with ONTAP
+= Configure RHEL 8.3 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
