--- a/nvme_rhel_84.adoc
+++ b/nvme_rhel_84.adoc
@@ -5,7 +5,7 @@ keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 8.4 with ONTAP
 ---
 
-= NVMe-oF Host Configuration for RHEL 8.4 with ONTAP
+= Configure RHEL 8.4 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
