--- a/nvme_rhel_88.adoc
+++ b/nvme_rhel_88.adoc
@@ -5,7 +5,7 @@ keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 8.8 with ONTAP
 ---
 
-= NVMe-oF host configuration for RHEL 8.8 with ONTAP
+= Configure RHEL 8.8 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
