--- a/nvme_rhel_90.adoc
+++ b/nvme_rhel_90.adoc
@@ -5,7 +5,7 @@ keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.0 with ONTAP
 ---
 
-= NVMe-oF host configuration for RHEL 9.0 with ONTAP
+= Configure RHEL 9.0 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
