--- a/nvme_rhel_91.adoc
+++ b/nvme_rhel_91.adoc
@@ -5,7 +5,7 @@ keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.1 with ONTAP
 ---
 
-= NVMe-oF host configuration for RHEL 9.1 with ONTAP
+= Configure RHEL 9.1 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
