--- a/nvme_rhel_93.adoc
+++ b/nvme_rhel_93.adoc
@@ -5,7 +5,7 @@ keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.3 with ONTAP
 ---
 
-= NVMe-oF host configuration for RHEL 9.3 with ONTAP
+= Configure RHEL 9.3 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -14,7 +14,7 @@ summary: How to Configure NVMe-oF Host for RHEL 9.3 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-include::_include/nvme/nvme-introduction.adoc[]
+include::_include/nvme/nvme-introduction.adoc[] 
 
 .About this task 
 You can use the following support and features with the NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 9.3. You should also review the known limitations before starting the configuration process.
